--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
         </div>
     </div>
     <div class="footer-last">
-        <p>2020 @ All rights reserved by pixelspark.co</p>
+        <div>
+            <p>2020 @ All rights reserved by pixelspark.co</p>
+        </div>
     </div>
 </body>
 </html>
